# micro-dal-pg

./: .gitignore  CHANGELOG.md  LICENSE  ghcid-test  make-test  micro-dal-pg.cabal  release.nix  shell.nix
derivations/: micro-dal.nix
src/Data/DAL/KeyValue/: Postgres.hs
test/Data/DAL/KeyValue/: PostgresSpec.hs
