cabal-version:       2.2

name:                micro-dal-pg
version:             0.1.0.0
synopsis:            Postgresql backend for Lightweight Data Access Layer
-- description:
homepage:            http://github.com/hexresearch/micro-dal-pg#readme.md
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sergey Ivanov
maintainer:          ivanovs-4@yandex.ru
-- copyright:
category:            Database
extra-source-files:  CHANGELOG.md

common deps
  build-depends:   base ^>=4.13.0.0
                 , micro-dal
                     , base58-bytestring
                     , bytestring
                     , conduit
                     , cryptonite
                     , exceptions
                     , filepath
                     , http-client
                     , http-client-tls
                     , interpolatedstring-perl6
                     , memory
                     , postgresql-simple
                     , safe
                     , sqlite-simple
                     , store
                     , string-conversions
                     , text
                     , unliftio
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DerivingStrategies
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuantifiedConstraints
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeApplications
                     , TypeFamilies

library
  import: deps
  exposed-modules:     Data.DAL.KeyValue.Postgres

test-suite micro-dal-pg-test
  import: deps
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base ^>=4.13.0.0
