cabal-version:       2.2

name:                micro-dal-pg
version:             0.1.0.0
synopsis:            Postgresql backend for Lightweight Data Access Layer
-- description:
homepage:            http://github.com/hexresearch/micro-dal-pg#readme.md
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sergey Ivanov
maintainer:          ivanovs-4@yandex.ru
-- copyright:
category:            Database
extra-source-files:  CHANGELOG.md

common deps
  build-depends:   base ^>=4.13.0.0
                 , micro-dal
                     , base58-bytestring
                     , bytestring
                     , containers
                     , interpolatedstring-perl6
                     , memory
                     , postgresql-simple
                     , safe
                     , store
                     , string-conversions
                     , text
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DerivingStrategies
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuantifiedConstraints
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeApplications
                     , TypeFamilies

library
  import: deps
  hs-source-dirs:      src
  exposed-modules:     Data.DAL.KeyValue.Postgres

test-suite micro-dal-pg-test
  import: deps
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  exposed-modules:     Data.DAL.KeyValue.PostgresSpec
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  build-depends:       base ^>=4.13.0.0
                 , hspec
                 , hspec-discover
                 , hspec-expectations
                 , hspec-need-env
                 , QuickCheck
